# teranite

./: .gitignore  .prettierrc  LICENSE  README.md
backend/: config.py  database.py  dependency.py  executable_request.py  github.py  main.py  pyproject.toml  replace.sh  router.py  teranite.db
backend/adapter/: token_json_encoder.py
backend/adaptor/: concrete_token_viewmodel.py  from_json_decoder.py  temporary_code.py  to_json_encoder.py  token_controller.py  token_presenter.py
backend/adaptor/datasource/: github_authtoken_api_datasource.py  github_user_db_datasource.py  github_userinfo_api_datasource.py
backend/adaptor/mediator/: concrete_token_viewmodel.py  login_presenter.py  (+4 more)
backend/database/: crud.py  models.py  schemas.py
backend/datasource/: github_authtoken_api_datasource.py  github_authtoken_datasource.py  github_user_datasource.py  github_user_db_datasource.py  github_userinfo_api_datasource.py  github_userinfo_datasource.py
backend/dependencies/: auth_container.py  dependency.py  login_container.py
backend/entity/: auth_token.py  github_temporary_code.py  github_user.py  github_user_info.py  raw_datetime.py  temporary_code.py  user_auth_token.py  user_info.py
backend/repository/: github_authtoken_repository.py  github_authtoken_simple_repository.py  github_user_repository.py  github_user_simple_repository.py  github_userinfo_repository.py  github_userinfo_simple_repository.py
backend/test/: conftest.py  pytest.ini
backend/usecase/: github_login.py  github_login_port.py  login.py  login_port.py  request_object.py  response_object.py
(+52 files in other folders)
