[tool.poetry]
name = "teranite"
version = "0.1.0"
description = ""
authors = ["Kyurenpoto <heal9179@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
httpx = "^0.21.3"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
black = "^21.12b0"
respx = "^0.19.1"
pytest-xdist = "^2.5.0"
Jinja2 = "^3.0.3"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
