[tool.poetry]
name = "teranite"
version = "0.1.0"
description = ""
authors = ["Kyurenpoto <heal9179@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
httpx = "^0.21.3"
respx = "^0.19.1"
Jinja2 = "^3.0.3"
aiofiles = "^0.8.0"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
black = "^21.12b0"
hypothesis = "^6.39.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
